--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 	<div class="navigation-bar">
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Tejas Taralkar</a>
+	<nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#">Tejas Taralkar</a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -27,19 +27,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
+        <a class="nav-link" href="#skills">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <a class="nav-link" href="#projects">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </li>
 
   </div>
@@ -47,5 +47,20 @@
 </div>
 
 	<!--.navbar end here.-->
+	<section id ="home" class="portfolio-section">
+		<h1>Home</h1>
+	</section>
+	<section id ="about" class="portfolio-section">
+		<h1>About</h1>
+	</section>
+	<section id ="skills" class="portfolio-section">
+		<h1>Skills</h1>
+	</section>
+	<section id ="projects" class="portfolio-section">
+		<h1>Projects</h1>
+	</section>
+	<section id ="contact" class="portfolio-section">
+		<h1>Contact</h1>
+	</section>
 </body>
 </html>
