--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div class="navigation-bar">
 
 	<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#">Tejas Taralkar</a> 
+  <a class="navbar-brand" href="#"><span class ="brand tracking-in-expand">Tejas Taralkar</span></a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -27,19 +27,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#home"><span class="navmenu">Home</span> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#about"><span class="navmenu">About</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#skills"><span class="navmenu">Skills</span> </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#projects">Projects</a>
+        <a class="nav-link" href="#projects"><span class="navmenu">Projects</span> </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact</a>
+        <a class="nav-link" href="#contact"><span class="navmenu">Contact</span> </a>
       </li>
 
   </div>
