--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,57 +10,192 @@
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 
-	<title>Tejas Portfolio</title>
+	<title>Portfolio_Tejas Sunil Taralkar</title>
 </head>
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <body>
-
+<!--.navbar start here.-->
 	<div class="navigation-bar">
+		<nav class="navbar navbar-expand-lg navbar-light">
+  			<a class="navbar-brand" href="#"><span class="brand tracking-in-expand">Tejas Sunil Taralkar</span></a>
+  				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    				<span class="navbar-toggler-icon"></span>
+ 				</button>
 
-	<nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><span class ="brand tracking-in-expand">Tejas Taralkar</span></a> 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+   				 <ul class="navbar-nav ml-auto">
+      				<li class="nav-item active">
+        				<a class="nav-link" href="#home"><span class="navmenu">Home</span> <span class="sr-only">(current)</span></a>
+     				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="#about"><span class="navmenu">About</span></a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="#skills"><span class="navmenu">Skills</span></a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="#projects"><span class="navmenu">Projects</span></a>
+      				</li>
+      				<li class="nav-item">
+        				<a class="nav-link" href="#contact"><span class="navmenu">Contact</span></a>
+      				</li>
+				 </ul>
+  				</div>
+		</nav>
+	</div>
+<!--.navbar end here.-->
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#home"><span class="navmenu">Home</span> <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#about"><span class="navmenu">About</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#skills"><span class="navmenu">Skills</span> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#projects"><span class="navmenu">Projects</span> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#contact"><span class="navmenu">Contact</span> </a>
-      </li>
+	<div class="main-container">
+		<section id="home" class="portfolio-sections">
+			<div id="home-info">
+				<span class="info">Hi</span><br/>
+				<span class="info">My name is</span></br>
+				<span class="brand myname">Tejas Sunil Taralkar</span></br>
+				<span class="info">I am <span class="designation">Java Full Stack Developer</span></span><br>
+				<button href="C:\Users\user\OneDrive\Desktop\Portfolio_TejasTaralkar\Tejas_Taralkar_NewFinalResume.pdf" class="rsmbtn">RESUME</button>
+			</div>
+		</section>
 
-  </div>
-</nav>
-</div>
+		<section id="about" class="portfolio-sections about-section">
+			<div class="aboutmain">
+				<div class="myimage">
+					<img class="minion" src="https://media4.giphy.com/media/oa4Au5xDZ6HJYF6KGH/giphy.gif" alt="">
+				</div>
+				<div class="careerobj">
+					<h1 class="heading">About</h1>
+					<p class="careerinfo">
+						Aspiring for the job role of Java full stack developer at your company which would provide me
+						with ample opportunities to showcase my technical abilities while working on 
+						complex projects & tasks assigned by you or your team members.
+					</p>
+				</div>
+			</div>
+		</section>
 
-	<!--.navbar end here.-->
-	<section id ="home" class="portfolio-section">
-		<h1>Home</h1>
-	</section>
-	<section id ="about" class="portfolio-section">
-		<h1>About</h1>
-	</section>
-	<section id ="skills" class="portfolio-section">
-		<h1>Skills</h1>
-	</section>
-	<section id ="projects" class="portfolio-section">
-		<h1>Projects</h1>
-	</section>
-	<section id ="contact" class="portfolio-section">
-		<h1>Contact</h1>
-	</section>
+		<section id="skills" class="portfolio-sections skills-section">
+			<h1 class="heading">Skills</h1>
+			<table class="tbl" height="450px" width="90%" cellspacing="50px">
+				<tr align="center" valign="top">
+					<div class="borderskills">
+						<td width="50%" data-aos="slide-right">
+							<h2 class="skills-subheading">Languages</h2>
+							<p class="detailedSkills">
+								Core Java, C, C++, Python, C, JavaScript, HTML, CSS, SQL.
+							</p>
+						</td>
+					</div>
+					<div class="borderskills">
+						<td data-aos="slide-left">
+							<h2 class="skills-subheading">API's & Frameworks</h2>
+							<p class="detailedSkills">
+								Collection, Stream API, Rest API, Spring, Hibernates, Servlets,
+								JDBC, SpringBoot, Spring MVC, JSP, ReactJS.
+							</p>
+						</td>
+					</div>
+				</tr>
+				<tr align="center" valign="top">
+					<div class="borderskills">
+						<td data-aos="slide-right">
+							<h2 class="skills-subheading">Tools</h2>
+							<p class="detailedSkills">
+								VS Code, Eclipse IDE, Git, Github, Netbeans, Postman, MySQL Workbench,
+								Maven, Tomcat, MongoDB.
+							</p>
+						</td>
+					</div>
+					<div class="borderskills">
+						<td data-aos="slide-left">
+							<h2 class="skills-subheading">Operating System</h2>
+							<p class="detailedSkills">
+								Windows, Android, ios, Linux, Ubuntu, Solaris.
+							</p>
+						</td>
+					</div>
+				</tr>
+			</table>
+		</section>
+
+		<section id="projects" class="portfolio-sections">
+			<h1 class="heading">Projects</h1>
+			<div class="project-card-container">
+				<div class="card-deck">
+
+				<div class="card" style="width: 18rem;">
+
+					<!-- img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Calculator_icon.svg/1200px-Calculator_icon.svg.png" class="card-img-top" alt="..." -->
+					<div class="card-body">
+					  <h5 class="card-title">Classification model for Amazon Alexa reviews.</h5>
+					  <p class="card-text">Create a classification model to predict the sentiment either (1 or 0) based on Amazon Alexa reviews 
+					  			Alexa products like Alexa Echo, Echo dots, Alexa Firesticks etc. for learning how to train Machine for
+       						 	sentiment analysis.
+       						 <button>
+								<a href="https://colab.research.google.com/drive/1l81y_uuk3WuCXtjgWqTuGWmRG2BwA7q5?usp=sharing">Code_link</a>
+							</button></p>
+
+					</div>
+				</div>
+				<div class="card">
+					<!--img src="https://cdn.jim-nielsen.com/ios/512/weather-2021-12-07.png" class="card-img-top" alt="..." -->
+					<div class="card-body">
+					  <h5 class="card-title">Next Gen. Authentication and Tracking Public Transport using Smart QR codes.</h5>
+					  <p class="card-text">The transportation industry has experienced significant advancements in recent years, necessitating
+       				 			the development of secure and efficient authentication systems. Traditional ticketing methods, such
+        						as paper tickets or magnetic stripe cards, have proven to be costly, inefficient, and prone to security
+        						concerns. To address these challenges, the use of smart QR codes in public transportation systems
+        						has emerged as a promising solution.</p>
+					</div>
+				</div>
+				</div>
+				</div>
+			</div>
+			<!-- card div ends here -->
+		</section>
+
+		<section id="contact" class="portfolio-sections">
+			<h1 class="heading">Contact</h1>
+			<div class="contact-section">
+				<div class="contact-child">
+					<ul class="contact-info" type="none">
+						<li>taralkartejas@gmail.com@gmail.com</li>
+						<li>+91 9370017734</li>
+						<li><a href="#">Github</a></li>
+						<li>linkedin</li>
+						<li>Address</li>
+					</ul>
+				</div>
+				<div class="contact-child contact-form">
+					<form>
+						<div class="form-group">
+						  <label for="exampleInputEmail1">Email address</label>
+						  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+						  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+						</div>
+						<div class="form-group">
+						  <label for="exampleInputPassword1">Comment</label>
+						  <textarea type="checkbox" class="form-control" id="exampleInputPassword1">
+						  </textarea>
+						</div>
+						<div class="form-group form-check">
+						  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+						  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+						</div>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					  </form>
+				</div>
+			</div>
+		</section>
+
+		<section id="footer">
+			<h1 id="footerinfo">Made By ©Tejas_Taralkar 2024</h1>
+		</section>
+	</div><script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script>
+	  AOS.init({
+		duration: 2000
+	  });
+	</script>
 </body>
 </html>
