--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 				<span class="info">My name is</span></br>
 				<span class="brand myname">Tejas Sunil Taralkar</span></br>
 				<span class="info">I am <span class="designation">Java Full Stack Developer</span></span><br>
-				<button href="C:\Users\user\OneDrive\Desktop\Portfolio_TejasTaralkar\Tejas_Taralkar_NewFinalResume.pdf" class="rsmbtn">RESUME</button>
+				<button><a href="C:\Users\user\OneDrive\Desktop\Portfolio_TejasTaralkar\Tejas_Taralkar_NewFinalResume.pdf" class="rsmbtn">RESUME</a></button>
 			</div>
 		</section>
 
 		<section id="about" class="portfolio-sections about-section">
 			<div class="aboutmain">
 				<div class="myimage">
-					<img class="minion" src="https://media4.giphy.com/media/oa4Au5xDZ6HJYF6KGH/giphy.gif" alt="">
+					<img class="minion" src="C:\Users\user\OneDrive\Desktop\Portfolio_TejasTaralkar\photofinal.jpg" alt="MyImage">
 				</div>
 				<div class="careerobj">
 					<h1 class="heading">About</h1>
@@ -125,7 +125,7 @@
 
 				<div class="card" style="width: 18rem;">
 
-					<!-- img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Calculator_icon.svg/1200px-Calculator_icon.svg.png" class="card-img-top" alt="..." -->
+					
 					<div class="card-body">
 					  <h5 class="card-title">Classification model for Amazon Alexa reviews.</h5>
 					  <p class="card-text">Create a classification model to predict the sentiment either (1 or 0) based on Amazon Alexa reviews 
@@ -138,7 +138,7 @@
 					</div>
 				</div>
 				<div class="card">
-					<!--img src="https://cdn.jim-nielsen.com/ios/512/weather-2021-12-07.png" class="card-img-top" alt="..." -->
+					
 					<div class="card-body">
 					  <h5 class="card-title">Next Gen. Authentication and Tracking Public Transport using Smart QR codes.</h5>
 					  <p class="card-text">The transportation industry has experienced significant advancements in recent years, necessitating
@@ -159,10 +159,10 @@
 			<div class="contact-section">
 				<div class="contact-child">
 					<ul class="contact-info" type="none">
-						<li>taralkartejas@gmail.com@gmail.com</li>
-						<li>+91 9370017734</li>
-						<li><a href="#">Github</a></li>
-						<li>linkedin</li>
+						<li>Email    : taralkartejas@gmail.com</li>
+						<li>Phone No :+91 9370017734</li>
+						<li>Github<a href="https://github.com/Tejastaralkar"> tejastaralkar</a></li>
+						<li>Linkedin<a href=""> tejastaralkar</li>
 						<li>Address</li>
 					</ul>
 				</div>
